# emil

./: .gitignore  Cargo.toml  README.md  cat-bench.md  compare_addrs.py  echo-bench.md
emulator/: Cargo.toml
emulator/src/: emil.rs  emulate.rs  lib.rs  load.rs  prog.rs
emulator/src/arch/: amd64.rs  arm64.rs  generic.rs  mod.rs  riscv.rs
emulator/src/os/: freestanding.rs  linux.rs  mod.rs
emulator/src/val/: big.rs  mod.rs
from_id/: Cargo.toml
from_id/src/: lib.rs
regs/: Cargo.toml  README.md  gen_reg_file.py
regs/src/: aarch64.rs  lib.rs  rv64gc.rs  x86.rs  x86_64.rs
softmew/src/: page.rs
src/: emil.rs  emulate.rs  lib.rs  load.rs  prog.rs
src/arch/: arm64.rs  mod.rs  riscv.rs
src/os/: linux.rs
test-bins/: Makefile  hello-riscv.asm  sum-stdin.c
ui/: CMakeLists.txt  README.md
ui/src/: emil.cpp  emil.h
val/: Cargo.toml
val/src/: big.rs  lib.rs
