[package]
name = "emil"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["from_id"]

[dependencies]
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev" }
softmew = { git = "https://github.com/james-a-johnson/softmew", tag = "v0.5.0" }
from_id = { path = "./from_id" }
