[package]
name = "emil"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["from_id"]

[features]
serde = ["dep:serde", "softmew/serde", "rmp-serde"]

[dependencies]
binaryninja = { git = "https://github.com/james-a-johnson/binaryninja-api.git", branch = "const-mask" }
# binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", rev = "92d75df37c76813ac4a71e35096dcb31ac1b18af" }
softmew = { git = "https://github.com/james-a-johnson/softmew", branch = "main" }
from_id = { path = "./from_id" }
serde = { version = "1.0", features = ["derive"], optional = true }
rmp-serde = { version = "1.3", optional = true }
