[package]
name = "emil"
version = "0.1.0"
edition = "2024"

[dependencies]
binaryninja = { git = "https://github.com/james-a-johnson/binaryninja-api.git", branch = "const-mask" }
# binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", rev = "92d75df37c76813ac4a71e35096dcb31ac1b18af" }
softmew = { path = "../softmew" }
from_id = { path = "../from_id" }
