[package]
name = "emil"
version = "0.1.0"
edition = "2024"

[dependencies]
# binaryninja = { git = "https://github.com/james-a-johnson/binaryninja-api.git", branch = "const-mask" }
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", rev = "0317c1a5c51e623a00249ecdefa0c5dd582e0eb1" }
softmew = { path = "../softmew" }
from_id = { path = "../from_id" }
