[package]
name = "emil"
version = "0.1.0"
edition = "2024"

[dependencies]
# binaryninja = { git = "https://github.com/james-a-johnson/binaryninja-api.git", branch = "const-mask" }
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", tag = "dev/5.3.8813" }
softmew = { path = "../softmew" }
from_id = { path = "../from_id" }
val = { path = "../val" }
regs = { path = "../regs" }
